logs/drift_src_art_painting_model_PACSCNN_4_policy_6_setting_76_schedule_RV_domain_change_burst_0_seed_9_imgsize_128_20250513_213300.log
  File "/home/apiasecz/programming/concept_drift_optimal_adaptation_FL/src/execute/evaluate_policy.py", line 453
    elif self.schedule_type.startswith("step"):
    ^
IndentationError: expected an indented block after 'elif' statement on line 451
